--- a/assets/MacOSXBundleInfo.plist.in
+++ b/assets/MacOSXBundleInfo.plist.in
@@ -34,5 +34,7 @@
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Using it to record audio input</string>
 </dict>
 </plist>
