--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ list(APPEND SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/peak_image.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/fft.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/fft.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/pitch_detect.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/pitch_detect.cpp
 )
 add_subdirectory(data_types)
 set(SOURCES ${SOURCES} PARENT_SCOPE)
