Added level and envelope detection

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,10 @@ list(APPEND SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/pitch_detect.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/window_reader.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/window_reader.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/levels.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/levels.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/envelope_detect.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/envelope_detect.cpp
 )
 add_subdirectory(data_types)
 set(SOURCES ${SOURCES} PARENT_SCOPE)
